--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Desenvolvedor Front End e UX Designer localizado no Rio de Janeiro.">
   <title>Marina - Desenvolvedora</title>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="img/marca.svg" type="image/svg+xml">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
   </header>
 
   <main class="introducao">
-    <img src="/perfil.jpg" alt="Marina" width="360px" height="520px">
+    <img src="img/perfil.jpg" alt="Marina" width="360px" height="520px">
     <div>
       <h1>Desenvolvedora<br> Front End & <br>Back End</h1>
       <p>Lozalidada em Ribeirão Preto</p>
