--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <span class="empresa-ano">2022</span>
         <h3 class="empresa-titulo">Barão de Mauá</h3>
         <span class="empresa-titulo">Estagiária</span>
-        <p class="empresa-texto">Como parte do plano de estágio, aprendi a usar diversas ferramentas para desenvolvimento de web, como HTML, CSS, JavaScript, jQuery. Além disso, também trabalhei com Back End, com PHP, MYSQL e SQLServer.</p>
+        <p class="empresa-texto">Como parte do plano de estágio, aprendi a usar diversas ferramentas para desenvolvimento de web, como HTML, CSS, JavaScript, jQuery. Além disso, também trabalhei com Back End, com PHP, MYSQL e SQLServer (SSMS).</p>
         <ul class="empresa-habilidades">
           <li>HTML</li>
           <li>CSS</li>
