--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
   </main>
 
   <section class="experiencia" id="experiencia" aria-label="Experiência">
-    <h2 class="subtitulo">Experiência</h2>
+    <h2 class="subtitulo anime">Experiência</h2>
     <div>
-      <p class="experiencia-texto">Desenvolvo pequenos projetos utilizando <strong>HTML</strong>, <strong>CSS</strong> e <strong> JavaScript</strong>. Atualmente estagio na área de T.I e curso Ciência da Computação.</p>
+      <p class="experiencia-texto anime">Desenvolvo pequenos projetos utilizando <strong>HTML</strong>, <strong>CSS</strong> e <strong> JavaScript</strong>. Atualmente estagio na área de T.I e curso Ciência da Computação.</p>
 
-      <div class="empresa">
+      <div class="empresa anime">
         <span class="empresa-ano">2022</span>
         <h3 class="empresa-titulo">Barão de Mauá</h3>
         <span class="empresa-titulo">Estagiária</span>
@@ -59,13 +59,13 @@
 
   <section class="formacao" id="formacao" aria-label="formacao">
     <div class="formacao-container">
-      <h2 class="subtitulo">Formação</h2>
+      <h2 class="subtitulo anime">Formação</h2>
 
       <div>
-        <p class="formacao-texto">
+        <p class="formacao-texto anime">
           Minha mais recente experiência acadêmica é o curso de <strong>Ciência da Computação</strong>. Além disso me mantenho sempre atualizada com cursos intensivos on-line e pequenos projetos.
         </p>
-        <ul class="faculdade-lista">
+        <ul class="faculdade-lista anime">
           <li class="faculdade">
             <span class="faculdade-tipo">Bacharelado</span>
             <h3 class="faculdade-curso">Ciência da Computação</h3>
@@ -73,7 +73,7 @@
           </li>
         </ul>
         
-        <div class="idiomas">
+        <div class="idiomas anime">
           <h3>Idiomas</h3><br>
           <ul>
             <li>Inglês <span>/ Fluente</span> </li>
@@ -81,7 +81,7 @@
           </ul>
         </div><br>
 
-        <br><div class="formacao-extra">
+        <br><div class="formacao-extra anime">
           <div class="cursos">
             <h3>Meios de Contato</h3><br>
             <ul>
@@ -100,7 +100,7 @@
   </section>
 
   <footer class="footer" id="contato">
-    <div class="footer-container">
+    <div class="footer-container anime">
       <p class="footer-texto">Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa. </p>
       <ul class="footer-contato">
         
@@ -108,7 +108,8 @@
       <p class="footer-copy">Marina Scheiffer. Alguns direitos reservados.</p>
     </div>
   </footer>
-
+ <script src="jquery-3.1.1.js"></script>
+ <script src="app.js"></script>
 </body>
 
 </html>
